# ChangeLog for dev-java/endrick-common
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*endrick-common-1.7.9 (09 Jul 2013)

  09 Jul 2013; johann@j-schmitz.net +endrick-common-1.7.9.ebuild,
  +files/1.7.9-build.xml, +metadata.xml:
  Added ebuild for endrick-common