@@ -1,23 +1,0 @@
-<project name="endrick-common" default="jar" basedir=".">
-  <property name="src" location="src"/>
-  <property name="build" location="build"/>
-  <property name="dist"  location="dist"/>
-
-  <target name="init">
-    <mkdir dir="${build}"/>
-  </target>
-
-  <target name="compile" depends="init" description="compile the source " >
-    <javac srcdir="${src}" destdir="${build}"/>
-  </target>
-
-  <target name="jar" depends="compile" description="generate the distribution" >
-    <!-- Put everything in ${build} into the MyProject-${DSTAMP}.jar file -->
-    <jar jarfile="${dist}/${ant.project.name}.jar" basedir="${build}"/>
-  </target>
-
-  <target name="clean" description="clean up" >
-    <delete dir="${build}"/>
-    <delete dir="${dist}"/>
-  </target>
-</project>
