@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Sep 2013; Johann Schmitz <ercpe@gentoo.org> -files/1.7.9-build.xml,
+  endrick-common-1.7.9.ebuild:
+  java-pkg-simple is enough for endrick-common
+
 *endrick-common-1.7.9 (09 Jul 2013)
 
   09 Jul 2013; johann@j-schmitz.net +endrick-common-1.7.9.ebuild,
